tests/toy/neg/001632_mutation.toylang
program a = { while a do sleep program; } .
